# AgentBridge

./: .gitignore  ARCHITECTURE.md  AgentBridge.pyw  AgentHarness.pyw  BACKLOG.md  CLAUDE.md  HANDOFF.md  README.md  REWRITE_PLAN.md  WORKING_AGREEMENT.md  agent_worker.py  check_frontend.py  handler_coco.py  mesh.py  mesh_cli.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
agentbridge/: __init__.py  export.py
agentbridge/applink/: __init__.py  control.py  machines.py  setup_assist.py  update.py
agentbridge/cli/: main.py
agentbridge/core/: __init__.py  config.py  errors.py  launcher.py  lock.py  models.py  timekit.py
agentbridge/crypto/: __init__.py  dpapi.py
agentbridge/gui/: __init__.py  __main__.py  api_agents.py  api_auth.py  api_chats.py  api_files.py  api_membership.py  api_messages.py  api_profile.py  api_updates.py  app.py  applock.py  context.py  desktop.py  fastboot.py  livefeed.py  restarter.py  routing.py  serialize.py  sse.py
agentbridge/harness/: __init__.py  __main__.py  bridge.py  broker.py  conversation.py  docs.py  feed.py  peer.py  prompt.py  queue.py  responder.py  runner.py  settings.py  timers.py  triggers.py
agentbridge/harness/adapters/: __init__.py  cli.py  registry.py
agentbridge/harness/prompts/: default.json  tooldocs.json
agentbridge/mesh/: __init__.py  accounts.py  authz.py  directory.py  eventbus.py  events.py  keyring.py  membership.py  messaging.py  notify.py  overlays.py  paths.py  presence.py  privacy.py  readmodel.py  receipts.py  sealer.py  service.py  sync.py
agentbridge/store/: db.py
agentbridge/transport/: __init__.py  base.py  cache.py  folder.py  supabase.py  supabase_admin.py
connectors/: base.py  folder.py
docs/: AGENT_RUNTIME_C0_AUDIT.md  AGENT_RUNTIME_PLAN.md  COCO_AUTH.md  DECISIONS.md  FORMAT2.md  GUI_AGENT_PARITY.md  PRIVACY_MODEL.md  SCALING.md  SECURITY_RLS.md  THREAT_MODEL.md  supabase_schema.sql
gui/: __init__.py  __main__.py  server.py
gui/static/: app.js  index.html  style.css
gui/static/js/: api.js  auth.js  chat.js  composer.js  csel.js  details.js  files.js  forward.js  icons.js  main.js  markdown.js  media.js  members.js  modal.js  notify.js  picker.js  realtime.js  search.js  settings.js  sidebar.js  state.js  util.js  (+2 more)
legacy/: AgentWorker.pyw  MIGRATION_RUNBOOK.md  REMOTE_SETUP.md  agent_worker.py  allowed_tools.json  bridge.py  hello_coco.md  mesh.py  mesh_cli.py  migrate_v1_to_v2.py  setup_claude_side.ps1
scripts/: avd_clean_install.ps1  avd_move_pack.py  rls_probe.py
skills/mesh-chat/: SKILL.md
spikes/r1/: smoke_crypto.py  smoke_embeddings.py  smoke_llamaindex.py  smoke_mcp.py  smoke_mem0.py  smoke_qdrant.py  smoke_supabase.py
tests/: conftest.py  test_accounts.py  test_adapters.py  test_applink.py  test_applock.py  test_broker.py  test_config.py  test_e2ee.py  test_events_notify.py  test_export.py  test_frontend_restart.py  test_gui_endpoints.py  test_gui_http.py  test_harness.py  test_janitor.py  test_launcher.py  test_mcp_cli.py  test_membership.py  test_messaging.py  test_models.py  test_peer.py  test_presence_receipts.py  test_privacy.py  test_prompts.py  test_readmodel.py  test_security.py  test_store.py  test_supabase_admin.py  test_supabase_transport.py  test_sync.py  test_timekit.py  test_transport_cache.py  test_transport_folder.py  test_updates.py
tools/: make_icon.py
(+6 files in other folders)
