[project]
name = "agentbridge"
# NOTE: the APP version source of truth stays gui/__init__.py __version__ until
# rewrite round R26 (see REWRITE_PLAN.md); this package version moves rarely.
version = "0.25.0"
description = "Humans and Agents, working in the same rooms."
requires-python = ">=3.11"
# Core stays LIGHT on purpose (packaging round depends on it): the mesh needs
# only crypto. Everything heavy is an optional extra.
dependencies = [
    "cryptography>=44",
]

[project.optional-dependencies]
# Vector memory + embeddings (harness memory stack, R20).
# The CORE is what every box can run: qdrant local + model2vec (pure numpy).
# fastembed is the preferred backend where onnxruntime loads (its DLLs are
# blocked on some corporate Windows machines, incl. the dev box) and mem0's
# entity linking needs an extraction LLM — both live in memory-full for the
# boxes/rounds that can use them (see docs/DECISIONS.md, D15/D16).
memory = [
    "qdrant-client>=1.18",
    "model2vec>=0.5",
]
memory-full = [
    "fastembed>=0.8",
    "mem0ai>=2.0",
]
# Semantic search / retrieval (R21)
retrieval = [
    "llama-index-core>=0.12",
    "llama-index-embeddings-fastembed>=0.3",
]
# mesh-cli MCP server (R12)
mcp = [
    "mcp>=1.2",
]
# Supabase realtime transport driver (R23)
cloud = [
    "supabase>=2.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    # threaded HTTP/SSE tests get a hard cap: a hang fails in seconds
    # instead of stalling the whole run (the R3 CI-hang lesson)
    "pytest-timeout>=2.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentbridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
